<resources>
	<string name="app_name">Read Stories, Learn Chinese</string>
	<string name="menu_show_annotation">Show annotations</string>
	<string name="menu_hide_annotation">Hide annotations</string>
	<string name="menu_change_article_language">Change article language</string>
	<string name="menu_help">Help</string>
	<string name="menu_settings">Settings</string>

	<string name="refresh">Refresh</string>
	<string name="chinese_direction">Chinese direction</string>

	<string name="dialog_title_not_supported">Not Supported</string>
	<string name="dialog_message_not_supported">This version of app is not supported by the web site.  It may due to it is not the latest version.  Please update it.</string>
	<string name="dialog_title_network_not_available">Network not Available</string>
	<string name="dialog_message_network_not_available">The network is not available.  Please connect to the network</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
