<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show_annotation"
        android:orderInCategory="100"
        android:title="@string/menu_show_annotation"/>

    <item
        android:id="@+id/action_hide_annotation"
        android:orderInCategory="100"
        android:title="@string/menu_hide_annotation"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/menu_help"/>

    <item
        android:id="@+id/action_change_article_language"
        android:orderInCategory="100"
        android:title="@string/menu_change_article_language"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
