<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/action_show_annotation"
        android:orderInCategory="100"
        android:title="@string/menu_show_annotation"/>

    <item
        android:id="@+id/action_hide_annotation"
        android:orderInCategory="100"
        android:title="@string/menu_hide_annotation"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/menu_help"/>

    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    -->
</menu>